# dataset-generator

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prek.md  CHANGELOG.md  LANGFUSE.md  Makefile  QUICK_START.md  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini  release-please-config-release.json  urls.json.example
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  lint.yml  release.yml  test.yml  unit-tests.yml  version.yml
.husky/: pre-commit
app/: config.py  data_manager.py  llm_client.py  main.py  models.py  pipeline.py  pipelines.py  scraper.py  settings.py  utils.py
app/core/: cache.py  config.py
app/models/: api.py  dataset.py  qa.py  scraper.py  scraping.py
app/pipelines/: __init__.py  dataset.py  dataset_pipeline.py
app/routers/: dataset.py  generate.py  langfuse.py  scrape.py
app/schemas/: base.py  dataset.py
app/services/: database.py  dataset.py  dataset_service.py  langfuse.py  llm.py  llm_service.py  qa.py  qa_service.py  scraper.py  scraper_service.py
app/spiders/: __init__.py
app/utils/: common.py  config.py  data_manager.py  langfuse.py  llm_client.py  logger.py  scraper.py
apps/client/: .eslintrc.cjs  .prettierrc.json  Dockerfile  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/client/src/: App.vue
apps/next/: .dockerignore  Dockerfile  openapi-ts.config.ts  package.json
apps/next/api/: client.ts  index.ts  sdk.ts  types.ts
apps/next/app/: layout.tsx  page.tsx
apps/next/hooks/: index.ts  use-datasets.ts  use-langfuse.ts  use-qa.ts
apps/next/providers/: index.tsx
apps/next/stores/: dataset.ts  generate.ts  langfuse.ts  qa.ts
apps/server/: Dockerfile  main.py  pyproject.toml
apps/server/api/: dataset.py  generate.py  langfuse.py  openai.py  owui.py  q_a.py
apps/server/core/: __init__.py  config.py  database.py
apps/server/core/utils/: text.py
apps/server/migrations/: env.py
apps/server/migrations/utils/: __init__.py  db_utils.py
apps/server/migrations/versions/: 63922aa4394f_create_tables.py  f5fd665ddf39_add_human_reviewed.py
apps/server/models/: __init__.py  dataset.py  scraper.py
apps/server/pipelines/: dataset.py
apps/server/routers/: dataset.py  generate.py  langfuse.py  q_a.py
apps/server/schemas/: dataset.py  generate.py  q_a.py  scraper.py
apps/server/scripts/: run.sh
apps/server/services/: dataset.py  dataset_service.py  langfuse.py  llm.py  qa.py  scraper.py
apps/server/tests/: README.md  conftest.py
apps/server/tests/api/: test_dataset.py  test_generate.py  test_langfuse.py  test_main.py  test_openai.py  test_owui_routes.py  test_q_a.py
apps/server/tests/core/: __init__.py  test_database.py  test_text_utils.py  test_url_utils.py
apps/server/tests/models/: test_dataset.py
apps/server/tests/pipelines/: __init__.py  test_dataset.py
apps/server/tests/services/: test_dataset.py  test_langfuse.py  test_llm.py  test_qa.py  test_scraper.py
apps/server/utils/: config.py  logger.py
apps/vue/: .dockerignore  Dockerfile  openapi-ts.config.ts  package.json
client/: package.json  pnpm-lock.yaml
client/src/api/: types.gen.ts
docker/: docker-compose.yml
docker/fastapi/: Dockerfile
docker/vue/: Dockerfile
jobs/crypto/: main.py
release/: release-please-config-prerelease.json  release-please-config-release.json  release-please-manifest.json
scripts/: benchmark-docker.sh  check-docker-setup.sh
server/: Dockerfile  alembic.ini  main.py
server/api/: generate.py  q_a.py
server/migrations/: env.py
server/models/: dataset.py
server/pipelines/: dataset.py
server/schemas/: q_a.py
server/scripts/: run.sh
server/services/: llm.py  qa.py  scraper.py
tests/: conftest.py  test_config.py  test_config_manual.py
tests/fixtures/: sample_urls.json
(+75 files in other folders)
