[project]
name = "datasets"
version = "0.1.0"
description = "A collection of web scraping datasets powered by FastAPI and Scrapy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "instructor>=1.14.3",
    "langfuse>=3.12.0",
    "openai>=2.9.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scrapy>=2.14.1,<2.15",
    "sqlmodel>=0.0.24",
    "alembic>=1.18.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.0",
    "ty>=0.0.4",
    "prek>=0.2.23",
]
migration = [
    "alembic>=1.16.5",
]

[tool.uv]
package = false

[tool.coverage.run]
relative_files = true
