[project]
name = "datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "instructor>=1.10.0",
    "langfuse>=3.3.2",
    "openai>=1.102.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.5",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
migration = [
    "alembic>=1.16.5",
]
